--- a/login.html
+++ b/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
@@ -10,10 +9,9 @@
     
 </body>
 </html>
-=======
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login Page</title>
+  <title>Login</title>
   <link rel="stylesheet" href="login.css"> 
 </head>
 <body>
@@ -33,4 +31,3 @@
   </div>
 </body>
 </html>
->>>>>>> e86076c (Pharmacy Project)
