--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
                     <a href="about.html">
                         <button>About us</button>
                     </a>
-                    <button>Doctor's Advice</button>
+                    <a href="advice2.html"><button>Doctor's Advice</button></a>
                     <div class="dropdown">
                         <button class="dropbtn">Categories</button>
                         <div class="dropdown-content">
@@ -263,14 +263,14 @@
             <div class="footer-column">
                 <h3>Company</h3>
                 <ul>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
 
             <div class="footer-column">
                 <h3>Need Help</h3>
                 <ul>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="FAQ.html">FAQs</a></li>
                 </ul>
             </div>
 
