--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
                     <a href="about.html">
                         <button>About us</button>
                     </a>
-                    <a href="advice2.html"><button>Doctor's Advice</button></a>
+                    <a href="advice.html"><button>Doctor's Advice</button></a>
                     <div class="dropdown">
                         <button class="dropbtn">Categories</button>
                         <div class="dropdown-content">
