Added FAQ and advice pages, updated home.html

--- a/FAQ.html
+++ b/FAQ.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer style="background-color: #2d8659; color: white; text-align: center; padding: 15px; position: relative;">
-    &copy; 2025 Your Pharmacy Name. All rights reserved.
+    &copy; 2025 Pharmacy Name. All rights reserved.
   </footer>
 
 </body>
