--- a/advice.html
+++ b/advice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,7 +31,9 @@
       line-height: 1.8;
     }
 
-    header, section, footer {
+    header,
+    section,
+    footer {
       background-color: var(--card-bg);
       margin: 30px auto;
       max-width: 1000px;
@@ -122,7 +125,9 @@
         padding: 10px;
       }
 
-      header, section, footer {
+      header,
+      section,
+      footer {
         padding: 25px;
       }
 
@@ -137,11 +142,13 @@
     }
   </style>
 </head>
+
 <body>
 
   <header>
     <h1>Doctor's Advice</h1>
-    <p>Trusted healthcare guidance from experienced professionals. Discover actionable advice for your health, lifestyle, and medication use. Please consult your doctor for personal medical decisions.</p>
+    <p>Trusted healthcare guidance from experienced professionals. Discover actionable advice for your health,
+      lifestyle, and medication use. Please consult your doctor for personal medical decisions.</p>
   </header>
 
   <section>
@@ -152,7 +159,8 @@
         <h3>Dr. Anjali Mehta</h3>
         <p><strong>Qualification:</strong> MBBS, MD (Internal Medicine)</p>
         <p><strong>Experience:</strong> 15+ years treating lifestyle-related disorders</p>
-        <p><strong>Philosophy:</strong> “Preventive care and early awareness are the cornerstones of a healthy life.”</p>
+        <p><strong>Philosophy:</strong> “Preventive care and early awareness are the cornerstones of a healthy life.”
+        </p>
       </div>
     </div>
   </section>
@@ -161,38 +169,47 @@
     <h2>Health & Lifestyle Tips</h2>
 
     <h3>🌱 Healthy Lifestyle</h3>
-    <p>Start with small habits—balanced diet, regular exercise, hydration, and quality sleep. Avoid sugar, junk food, and excessive screen time. Prioritize mental peace and take breaks throughout the day.</p>
+    <p>Start with small habits—balanced diet, regular exercise, hydration, and quality sleep. Avoid sugar, junk food,
+      and excessive screen time. Prioritize mental peace and take breaks throughout the day.</p>
 
     <h3>💊 Medication Tips</h3>
-    <p>Follow prescriptions carefully. Never self-medicate or skip doses. Store meds in a cool, dry place. Use reminders or pill organizers for chronic treatments.</p>
+    <p>Follow prescriptions carefully. Never self-medicate or skip doses. Store meds in a cool, dry place. Use reminders
+      or pill organizers for chronic treatments.</p>
 
     <h3>☀️ Seasonal Health</h3>
-    <p>Stay hydrated during summer. Avoid street food during monsoon. In winter, boost immunity with Vitamin C, stay warm, and avoid sudden temperature changes.</p>
+    <p>Stay hydrated during summer. Avoid street food during monsoon. In winter, boost immunity with Vitamin C, stay
+      warm, and avoid sudden temperature changes.</p>
 
     <h3>🧠 Mental Wellness</h3>
-    <p>Practice mindfulness, journaling, and daily self-care. Don’t hesitate to seek therapy. Surround yourself with positivity and set screen-time boundaries.</p>
+    <p>Practice mindfulness, journaling, and daily self-care. Don’t hesitate to seek therapy. Surround yourself with
+      positivity and set screen-time boundaries.</p>
 
     <h3>👩 Women’s Health</h3>
-    <p>Track menstrual cycles, maintain hygiene, take calcium-rich foods, and get regular thyroid and breast screenings. Stress and fatigue are signals—don’t ignore them.</p>
+    <p>Track menstrual cycles, maintain hygiene, take calcium-rich foods, and get regular thyroid and breast screenings.
+      Stress and fatigue are signals—don’t ignore them.</p>
   </section>
 
   <section>
     <h2>Condition-Based Advice</h2>
 
     <h3>🩸 Diabetes Management</h3>
-    <p>Control sugar intake, follow a fiber-rich diet, exercise, and check sugar levels as prescribed. Never skip meds, and keep feet clean and checked regularly.</p>
+    <p>Control sugar intake, follow a fiber-rich diet, exercise, and check sugar levels as prescribed. Never skip meds,
+      and keep feet clean and checked regularly.</p>
 
     <h3>💓 Heart Health</h3>
-    <p>Exercise, avoid fatty/salty foods, and maintain healthy cholesterol. Include Omega-3s and green vegetables. Don’t ignore chest discomfort or shortness of breath.</p>
+    <p>Exercise, avoid fatty/salty foods, and maintain healthy cholesterol. Include Omega-3s and green vegetables. Don’t
+      ignore chest discomfort or shortness of breath.</p>
 
     <h3>🧠 Mental Health</h3>
-    <p>Stay socially connected, exercise your mind, and seek help when needed. Good sleep, journaling, and mindfulness improve emotional strength.</p>
+    <p>Stay socially connected, exercise your mind, and seek help when needed. Good sleep, journaling, and mindfulness
+      improve emotional strength.</p>
   </section>
 
   <section>
     <h2>Recommended Products</h2>
     <ul>
-      <li><strong>Blood Glucose Monitor:</strong> Track sugar levels with ease. <em>Consult your doctor before choosing.</em></li>
+      <li><strong>Blood Glucose Monitor:</strong> Track sugar levels with ease. <em>Consult your doctor before
+          choosing.</em></li>
       <li><strong>Omega-3 Capsules:</strong> Support for heart, joints, and brain.</li>
       <li><strong>Herbal Cough Syrup:</strong> Non-drowsy relief for seasonal coughs.</li>
     </ul>
@@ -200,7 +217,8 @@
 
   <section class="disclaimer">
     <h3>Disclaimer</h3>
-    <p>This page is for informational use only. Always consult a qualified medical professional for diagnosis or emergency help. Do not rely solely on online advice for health conditions.</p>
+    <p>This page is for informational use only. Always consult a qualified medical professional for diagnosis or
+      emergency help. Do not rely solely on online advice for health conditions.</p>
   </section>
 
   <footer>
@@ -211,4 +229,5 @@
   </footer>
 
 </body>
+
 </html>
