--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         <div class="cards">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -71,7 +71,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -84,7 +84,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -97,7 +97,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -115,7 +115,7 @@
         <div class="cards-2">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -131,7 +131,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -147,7 +147,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -163,7 +163,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -181,7 +181,7 @@
         <div class="cards-3">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -197,7 +197,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -213,7 +213,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -229,7 +229,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -246,7 +246,7 @@
         <div class="cards-4">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -262,7 +262,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -278,7 +278,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -294,7 +294,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="image1.jpg" alt="Medicine Image" />
+                    <img src="assets/download.jpg" alt="Medicine Image" />
                 </div>
                 <button class="add-cart-btn">Add to cart</button>
                 <div class="product-details">
@@ -338,19 +338,19 @@
                 <ul class="social-icons">
                     <li>
                         <a href="https://instagram.com" target="_blank">
-                            <img src="instagram-1-svgrepo-com.svg" alt="Instagram" class="icon" />
+                            <img src="assets/instagram-1-svgrepo-com.svg" alt="Instagram" class="icon" />
                             Instagram
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/" target="_blank">
-                            <img src="facebook-color-svgrepo-com.svg" alt="Instagram" class="icon" />
+                            <img src="assets/facebook-color-svgrepo-com.svg" alt="Instagram" class="icon" />
                             Facebook
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/notifications/?filter=all" target="_blank">
-                            <img src="linkedin-svgrepo-com.svg" alt="Instagram" class="icon" />
+                            <img src="assets/linkedin-svgrepo-com.svg" alt="Instagram" class="icon" />
                             LinkedIn
                         </a>
                     </li>
