--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       padding: 0;
       font-family: 'Roboto', sans-serif;
       background: linear-gradient(to right, #dcedc8, #b2dfdb);
+
       color: #333;
       min-height: 100vh;
     }
@@ -122,6 +123,25 @@
       margin-left: 8px;
     }
 
+    footer {
+      text-align: center;
+      font-size: 0.95em;
+    }
+
+    p {
+      margin-bottom: 16px;
+    }
+
+    a {
+      color: #2e7d32;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+
     @media (max-width: 768px) {
       .container {
         margin: 20px;
@@ -176,6 +196,12 @@
       <blockquote>"Great service and a wide range of products. I always find what I need here."</blockquote>
     </div>
 
+    <a href="faq.html" class="cta-button">Learn More</a>
+
+    <footer>
+      <p>&copy; 2025 PharmaWebsite.com | <a href="PrivacyandCondition.html">Privacy Policy</a> | <a
+          href="PrivacyandCondition.html">Terms & Conditions</a></p>
+    </footer>
   </div>
 </body>
 
