--- a/FAQ.html
+++ b/FAQ.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FAQ - Pharmacy Website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 </head>
 
 <body
-  style="font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0;  background: linear-gradient(to right, #dcedc8, #b2dfdb);">
+  style="font-family: 'Poppins', sans-serif; line-height: 1.6; margin: 0; padding: 0;  background: linear-gradient(to right, #dcedc8, #b2dfdb);">
 
-  <header style="background-color: #2d8659; color: white; padding: 20px; text-align: center;">
+  <header style="background-color: #2e7d32;; color: white; padding: 20px; text-align: center;">
     <h1>Frequently Asked Questions</h1>
   </header>
 
@@ -47,8 +48,8 @@
 
   </main>
 
-  <footer style="background-color: #2d8659; color: white; text-align: center; padding: 15px; position: relative;">
-    &copy; 2025 Pharmacy Name. All rights reserved.
+  <footer style="background-color: #2e7d32;; color: white; text-align: center; padding: 15px; position: relative;">
+    &copy; 2025 Your Pharmacy Name. All rights reserved.
   </footer>
 
 </body>
