--- a/FAQ.html
+++ b/FAQ.html
@@ -11,7 +11,7 @@
 <body
   style="font-family: 'Poppins', sans-serif; line-height: 1.6; margin: 0; padding: 0;  background: linear-gradient(to right, #dcedc8, #b2dfdb);">
 
-  <header style="background-color: #2e7d32;; color: white; padding: 20px; text-align: center;">
+  <header style="background: linear-gradient(to right, #dcedc8, #b2dfdb); color: #1b5e20;  text-align: center; font-size: x-large;">
     <h1>Frequently Asked Questions</h1>
   </header>
 
@@ -48,7 +48,7 @@
 
   </main>
 
-  <footer style="background-color: #2e7d32;; color: white; text-align: center; padding: 15px; position: relative;">
+  <footer style="background-color: #f1f8e9;; color: #2e7d32; text-align: center; padding: 15px; position: relative;">
     &copy; 2025 Your Pharmacy Name. All rights reserved.
   </footer>
 
