--- a/Helpline.html
+++ b/Helpline.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #f1f8e9, #e0f2f1);
+            background:linear-gradient(to right, #dcedc8, #b2dfdb);
             color: #2e7d32;
         }
 
