--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
 
     h1 {
       font-family: 'Poppins', sans-serif;
-      color: #2e7d6c;
+      color: #1b5e20;
       text-align: center;
-      font-size: 3rem;
-      margin-bottom: 25px;
+      font-size: 3.5rem;
+      /* margin-bottom: 25px; */
     }
 
     h2 {
@@ -164,8 +164,11 @@
 </head>
 
 <body>
-  <div class="container">
+  <header>
     <h1>About Us</h1>
+</header>
+  <div class="container">
+   
     <p>Welcome to our pharmacy! We are dedicated to providing high-quality healthcare products and services to our
       community. Our team of professionals is committed to ensuring your health and well-being.</p>
     <p>At our pharmacy, you will find a wide range of medications, health products, and expert advice to help you live a
