--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <div class="logo">Logo Half</div>
             <nav class="nav-buttons">
                 <a href="about.html"><button>About us</button></a>
-                <a href="doctorsadvice.html"><button>👨‍⚕️Doctor's Advice</button></a>
+                <a href="advice.html"><button>👨‍⚕️Doctor's Advice</button></a>
                 <div class="dropdown">
                     <button class="dropbtn">Categories</button>
                     <div class="dropdown-content">
