--- a/PolicyReturn.html
+++ b/PolicyReturn.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to right, #e8f5e9, #e0f2f1);
+           background:linear-gradient(to right, #dcedc8, #b2dfdb);
             color: #2e7d32;
         }
 
