--- a/advice.html
+++ b/advice.html
@@ -71,7 +71,6 @@
       display: flex;
       align-items: center;
       gap: 24px;
-      flex-wrap: wrap;
       margin-top: 20px;
     }
 
@@ -81,6 +80,27 @@
       border-radius: 50%;
       border: 4px solid var(--secondary);
       object-fit: cover;
+    }
+    #more {
+      display: none;
+    }
+
+    #dots {
+      display: inline;
+    }
+
+    #myBtn {
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    #myBtn:hover {
+      background-color: #1b5e20;
     }
 
     ul {
@@ -119,7 +139,7 @@
     footer a:hover {
       text-decoration: underline;
     }
-
+   
     @media (max-width: 768px) {
       body {
         padding: 10px;
@@ -282,7 +302,6 @@
           <li>✔️ 100% Genuine Medicines</li>
           <li>✔️ Fast & Safe Delivery</li>
           <li>✔️ 24/7 Support & Consultation</li>
-          <li>✔️ Trusted by 1 Lakh+ Users</li>
         </ul>
       </div>
 
